--- a/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
@@ -45,13 +45,6 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>libsvm</groupId>
-			<artifactId>libsvm</artifactId>
-			<version>2.89</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
 			<groupId>opennlp</groupId>
 			<artifactId>maxent</artifactId>
 			<version>2.5.1</version>
@@ -90,6 +83,11 @@
     		de.tudarmstadt.ukp.dkpro.core.api.resources-asl
     	</artifactId>
 			<version>1.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>tw.edu.ntu.csie</groupId>
+			<artifactId>libsvm</artifactId>
+			<version>3.1</version>
 		</dependency>
 	</dependencies>
 </project>
