--- a/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
@@ -26,6 +26,16 @@
 	</parent>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</artifactId>
 	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+	<repositories>
+		<repository>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<id>cleartk-googlecode</id>
+			<name>ClearTK Google Code repository</name>
+			<url>http://cleartk.googlecode.com/svn/repo/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
