Update dependencies so that a public release of stanfordnlp-gpl is used

--- a/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
@@ -11,17 +11,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
-			<artifactId>
-  			de.tudarmstadt.ukp.dkpro.core.stanfordnlp-model-lexparser-en-pcfg
-  		</artifactId>
-			<version>20120203</version>
+			<artifactId>de.tudarmstadt.ukp.dkpro.core.stanfordnlp-model-parser-en-pcfg</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
 			<artifactId>
 				de.tudarmstadt.ukp.dkpro.core.stanfordnlp-gpl
 			</artifactId>
-			<version>1.3.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
@@ -37,14 +33,12 @@
 			<artifactId>
 				de.tudarmstadt.ukp.dkpro.core.stopwordremover-asl
 			</artifactId>
-			<version>1.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
 			<artifactId>
 				de.tudarmstadt.ukp.dkpro.core.tokit-asl
 			</artifactId>
-			<version>1.4.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
@@ -78,4 +72,17 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+				<artifactId>
+					de.tudarmstadt.ukp.dkpro.core.stanfordnlp-gpl
+				</artifactId>
+				<version>1.4.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 </project>
