--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
   			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
   			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.core</artifactId>
   			<version>0.0.1-SNAPSHOT</version>
+  			<type>pom</type>
+  			<scope>import</scope>
   		</dependency>
   	</dependencies>
   </dependencyManagement>
