--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
   	<module>de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl</module>
   	<module>de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</module>
   	<module>de.tudarmstadt.ukp.dkpro.wsd.examples-gpl</module>
+  	<module>de.tudarmstadt.ukp.dkpro.wsd.wsi</module>
   </modules>
   <dependencyManagement>
   	<dependencies>
