Added project descriptions in the pom.xml files

--- a/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
@@ -92,4 +92,6 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+	<name>DKPro WSD GPL - Examples</name>
+	<description>Example code for DKPro WSD</description>
 </project>
