--- a/de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl/pom.xml
@@ -34,4 +34,6 @@
   		<version>0.0.1-SNAPSHOT</version>
   	</dependency>
   </dependencies>
+  <name>DKPro WSD GPL - TWSI disambiguation</name>
+  <description>DKPro WSD GPL modules for the Turk Bootstrap Word Sense Inventory disambiguation system</description>
 </project>
