--- a/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 		<artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.9.0</version>
 	</parent>
 	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd.examples-gpl</artifactId>
@@ -26,7 +25,7 @@
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.lesk</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
@@ -45,14 +44,14 @@
 			<artifactId>
 				de.tudarmstadt.ukp.dkpro.wsd.senseval
 			</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>
 				de.tudarmstadt.ukp.dkpro.wsd.si.wordnet
 			</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.uimafit</groupId>
@@ -64,19 +63,19 @@
 			<artifactId>
 				de.tudarmstadt.ukp.dkpro.wsd.evaluation
 			</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.si.lsr</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>
 				de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity
 			</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.9.0</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
