--- a/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
@@ -21,7 +21,7 @@
 	<parent>
 		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 		<artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-		<version>0.9.0</version>
+		<version>0.9.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</artifactId>
 	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
@@ -43,7 +43,7 @@
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.si.lsr</artifactId>
-			<version>0.9.0</version>
+			<version>0.9.1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
