--- a/de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
     <artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.1-SNAPSHOT</version>
   </parent>
   <artifactId>de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl</artifactId>
   <groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
@@ -31,7 +31,7 @@
   		<artifactId>
   			de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl
   		</artifactId>
-  		<version>0.9.0</version>
+  		<version>0.9.1-SNAPSHOT</version>
   	</dependency>
   </dependencies>
   <name>DKPro WSD GPL - TWSI disambiguation</name>
