--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   </parent>
   <groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
   <artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-  <version>0.9.0</version>
+  <version>0.9.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
   	<module>de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl</module>
@@ -38,7 +38,7 @@
   		<dependency>
   			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
   			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.core</artifactId>
-  			<version>0.9.0</version>
+  			<version>0.9.1-SNAPSHOT</version>
   			<type>pom</type>
   			<scope>import</scope>
   		</dependency>
@@ -49,9 +49,9 @@
   <description>DKPro WSD is a UIMA framework for word sense disambiguation licensed under the Apache License 2.0. This project contains GPL-licensed components for use with the main DKPro WSD project. </description>
   <inceptionYear>2013</inceptionYear>
   <scm>
-  	<url>https://code.google.com/p/dkpro-wsd-gpl/source/browse/#svn/tags/de.tudarmstadt.ukp.dkpro.wsd-gpl-0.9.0</url>
-  	<connection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/tags/de.tudarmstadt.ukp.dkpro.wsd-gpl-0.9.0</connection>
-  	<developerConnection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/tags/de.tudarmstadt.ukp.dkpro.wsd-gpl-0.9.0</developerConnection>
+  	<url>https://code.google.com/p/dkpro-wsd-gpl/source/browse/#svn/trunk</url>
+  	<connection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/trunk</connection>
+  	<developerConnection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/trunk</developerConnection>
   </scm>
   <issueManagement>
   	<system>Google Code</system>
