--- a/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
@@ -14,14 +14,15 @@
 	GNU General Public License for more details.
 
 	You should have received a copy of the GNU General Public License
-	along with this program. If not, see <http://www.gnu.org/licenses />.
+	along with this program. If not, see <http://www.gnu.org/licenses/>.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 		<artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-		<version>0.9.1-SNAPSHOT</version>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</artifactId>
 	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
@@ -43,7 +44,7 @@
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.si.lsr</artifactId>
-			<version>0.9.1-SNAPSHOT</version>
+			<version>0.0.1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
