--- a/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.si.lsr</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>0.9.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
