--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,37 @@
   		<dependency>
   			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
   			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.core</artifactId>
-  			<version>0.0.1-SNAPSHOT</version>
+  			<version>0.9.0</version>
   			<type>pom</type>
   			<scope>import</scope>
+  		</dependency>
+  		<dependency>
+  			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+  			<artifactId>
+  				de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl
+  			</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+  			<artifactId>
+  				de.tudarmstadt.ukp.dkpro.wsd.examples-gpl
+  			</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+  			<artifactId>
+  				de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl
+  			</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+  			<artifactId>
+  				de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl
+  			</artifactId>
+  			<version>0.0.1-SNAPSHOT</version>
   		</dependency>
   	</dependencies>
   </dependencyManagement>
