--- a/pom.xml
+++ b/pom.xml
@@ -10,81 +10,82 @@
 
 	This program is distributed in the hope that it will be useful,
 	but WITHOUT ANY WARRANTY; without even the implied warranty of
-	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 	GNU General Public License for more details.
 
 	You should have received a copy of the GNU General Public License
-	along with this program.  If not, see <http://www.gnu.org/licenses />.
+	along with this program. If not, see <http://www.gnu.org/licenses />.
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
-    <artifactId>dkpro-parent-pom</artifactId>
-    <version>4</version>
-  </parent>
-  <groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
-  <artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-  <version>0.9.1-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-  	<module>de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl</module>
-  	<module>de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl</module>
-  	<module>de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</module>
-  	<module>de.tudarmstadt.ukp.dkpro.wsd.examples-gpl</module>
-  </modules>
-  <dependencyManagement>
-  	<dependencies>
-  		<dependency>
-  			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
-  			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.core</artifactId>
-  			<version>0.9.0</version>
-  			<type>pom</type>
-  			<scope>import</scope>
-  		</dependency>
-  		<dependency>
-  			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
-  			<artifactId>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
+		<artifactId>dkpro-parent-pom</artifactId>
+		<version>4</version>
+	</parent>
+	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+	<artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
+	<version>0.9.1-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<modules>
+		<module>de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl</module>
+		<module>de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl</module>
+		<module>de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</module>
+		<module>de.tudarmstadt.ukp.dkpro.wsd.examples-gpl</module>
+	</modules>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+				<artifactId>de.tudarmstadt.ukp.dkpro.wsd.core</artifactId>
+				<version>0.9.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl
   			</artifactId>
-  			<version>0.9.1-SNAPSHOT</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
-  			<artifactId>
+				<version>0.9.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.examples-gpl
   			</artifactId>
-  			<version>0.9.1-SNAPSHOT</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
-  			<artifactId>
+				<version>0.9.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl
   			</artifactId>
-  			<version>0.9.1-SNAPSHOT</version>
-  		</dependency>
-  		<dependency>
-  			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
-  			<artifactId>
+				<version>0.9.1-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
+				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl
   			</artifactId>
-  			<version>0.9.1-SNAPSHOT</version>
-  		</dependency>
-  	</dependencies>
-  </dependencyManagement>
-  <name>DKPro WSD GPL</name>
-  <url>https://code.google.com/p/dkpro-wsd-gpl/</url>
-  <description>DKPro WSD is a UIMA framework for word sense disambiguation licensed under the Apache License 2.0. This project contains GPL-licensed components for use with the main DKPro WSD project. </description>
-  <inceptionYear>2013</inceptionYear>
-  <scm>
-  	<url>https://code.google.com/p/dkpro-wsd-gpl/source/browse/#svn/trunk</url>
-  	<connection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/trunk</connection>
-  	<developerConnection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/trunk</developerConnection>
-  </scm>
-  <issueManagement>
-  	<system>Google Code</system>
-  	<url>https://code.google.com/p/dkpro-wsd/issues/list</url>
-  </issueManagement>
+				<version>0.9.1-SNAPSHOT</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	<name>DKPro WSD GPL</name>
+	<url>https://code.google.com/p/dkpro-wsd-gpl/</url>
+	<description>DKPro WSD is a UIMA framework for word sense disambiguation licensed under the Apache License 2.0. This project contains GPL-licensed components for use with the main DKPro WSD project. </description>
+	<inceptionYear>2013</inceptionYear>
+	<scm>
+		<url>https://code.google.com/p/dkpro-wsd-gpl/source/browse/#svn/trunk</url>
+		<connection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/trunk</connection>
+		<developerConnection>scm:svn:https://dkpro-wsd-gpl.googlecode.com/svn/trunk</developerConnection>
+	</scm>
+	<issueManagement>
+		<system>Google Code</system>
+		<url>https://code.google.com/p/dkpro-wsd/issues/list</url>
+	</issueManagement>
 	<build>
 		<extensions>
 			<extension>
@@ -104,4 +105,10 @@
 			<url>dav:https://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-ukp-snapshots-local</url>
 		</snapshotRepository>
 	</distributionManagement>
+	<repositories>
+		<repository>
+			<id>ukp-oss-releases</id>
+			<url>http://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-releases</url>
+		</repository>
+	</repositories>
 </project>
