--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@
 						<exclude>src/main/resources/**/*</exclude>
 						<exclude>src/test/resources/**/*</exclude>
 						<exclude>.license-header.txt</exclude>
+						<exclude>pom.xml</exclude>
 					</excludes>
 				</configuration>
 				<executions>
