--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,11 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses />.
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
@@ -27,7 +28,7 @@
 	</parent>
 	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-	<version>0.9.2-SNAPSHOT</version>
+	<version>0.9.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl</module>
@@ -40,7 +41,7 @@
 			<dependency>
 				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 				<artifactId>de.tudarmstadt.ukp.dkpro.wsd.core</artifactId>
-				<version>0.9.2-SNAPSHOT</version>
+				<version>0.9.1-SNAPSHOT</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
@@ -49,28 +50,28 @@
 				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl
   			</artifactId>
-				<version>0.9.2-SNAPSHOT</version>
+				<version>0.9.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.examples-gpl
   			</artifactId>
-				<version>0.9.2-SNAPSHOT</version>
+				<version>0.9.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl
   			</artifactId>
-				<version>0.9.2-SNAPSHOT</version>
+				<version>0.9.1-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 				<artifactId>
   				de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl
   			</artifactId>
-				<version>0.9.2-SNAPSHOT</version>
+				<version>0.9.1-SNAPSHOT</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
