--- a/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
@@ -15,7 +15,7 @@
     GNU General Public License for more details.
 
     You should have received a copy of the GNU General Public License
-    along with this program.  If not, see <http://www.gnu.org/licenses />.
+    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 		<artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
-		<version>0.9.2-SNAPSHOT</version>
+		<version>0.9.1-SNAPSHOT</version>
 	</parent>
 	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd.examples-gpl</artifactId>
@@ -45,7 +45,6 @@
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.lesk</artifactId>
-			<version>0.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
@@ -64,37 +63,32 @@
 			<artifactId>
 				de.tudarmstadt.ukp.dkpro.wsd.senseval
 			</artifactId>
-			<version>0.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>
 				de.tudarmstadt.ukp.dkpro.wsd.si.wordnet
 			</artifactId>
-			<version>0.9.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.uimafit</groupId>
-			<artifactId>uimafit</artifactId>
+			<groupId>org.apache.uima</groupId>
+			<artifactId>uimafit-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>
 				de.tudarmstadt.ukp.dkpro.wsd.evaluation
 			</artifactId>
-			<version>0.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>de.tudarmstadt.ukp.dkpro.wsd.si.lsr</artifactId>
-			<version>0.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 			<artifactId>
 				de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity
 			</artifactId>
-			<version>0.9.0</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
@@ -104,7 +98,7 @@
 				<artifactId>
 					de.tudarmstadt.ukp.dkpro.core.stanfordnlp-gpl
 				</artifactId>
-				<version>1.4.0</version>
+				<version>1.5.0</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
