Rename si.germanet module to si.germanet-gpl

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 		<module>de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</module>
 		<module>de.tudarmstadt.ukp.dkpro.wsd.examples-gpl</module>
 		<module>de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl</module>
-		<module>de.tudarmstadt.ukp.dkpro.wsd.si.germanet</module>
+		<module>de.tudarmstadt.ukp.dkpro.wsd.si.germanet-gpl</module>
 	</modules>
 	<dependencyManagement>
 		<dependencies>
