--- a/de.tudarmstadt.ukp.dkpro.wsd-asl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd-asl/pom.xml
@@ -23,9 +23,7 @@
 		<version>1.3.0-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd-asl</artifactId>
-	<version>1.3.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<dependencies>
 		<dependency>
@@ -114,7 +112,7 @@
 			<dependency>
 				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
 				<artifactId>de.tudarmstadt.ukp.dkpro.wsd.si.tackbp</artifactId>
-				<version>1.1.0-SNAPSHOT</version>
+				<version>1.3.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
@@ -194,7 +192,7 @@
 		</profile>
 	</profiles>
 	<name>DKPro WSD ASL</name>
-	<description>DKPro WSD is a UIMA framework for word sense disambiguation. It is designed to complement DKPro Core, a collection of software components for natural language processing (NLP) based on the Apache UIMA framework. </description>
+	<description>DKPro WSD is a UIMA framework for word sense disambiguation. This project contains ASL-licensed components for use with the main DKPro WSD project.</description>
 	<inceptionYear>2013</inceptionYear>
 	<licenses>
 		<license>
