--- a/de.tudarmstadt.ukp.dkpro.wsd-asl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd-asl/pom.xml
@@ -24,6 +24,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd-asl</artifactId>
+	<relativePath>../de.tudarmstadt.ukp.dkpro.wsd-asl</relativePath>
 	<packaging>pom</packaging>
 	<dependencies>
 		<dependency>
