--- a/de.tudarmstadt.ukp.dkpro.wsd-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd-gpl/pom.xml
@@ -26,6 +26,7 @@
 		<version>1.3.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>de.tudarmstadt.ukp.dkpro.wsd-gpl</artifactId>
+	<relativePath>../de.tudarmstadt.ukp.dkpro.wsd-gpl</relativePath>
 	<packaging>pom</packaging>
 	<modules>
 		<module>../de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl</module>
