--- a/de.tudarmstadt.ukp.dkpro.wsd.io/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.io/pom.xml
@@ -19,6 +19,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>de.tudarmstadt.ukp.dkpro.wsd-asl</artifactId>
+    <relativePath>../de.tudarmstadt.ukp.dkpro.wsd-asl</relativePath>
     <groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
     <version>1.3.0-SNAPSHOT</version>
   </parent>
