--- a/de.tudarmstadt.ukp.dkpro.wsd.tackbp/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.tackbp/pom.xml
@@ -20,6 +20,7 @@
   <parent>
     <groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
     <artifactId>de.tudarmstadt.ukp.dkpro.wsd-asl</artifactId>
+    <relativePath>../de.tudarmstadt.ukp.dkpro.wsd-asl</relativePath>
     <version>1.3.0-SNAPSHOT</version>
   </parent>
   <artifactId>de.tudarmstadt.ukp.dkpro.wsd.tackbp</artifactId>
