--- a/de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity.wikipedia/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity.wikipedia/pom.xml
@@ -53,16 +53,11 @@
   		</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>de.tudarmstadt.ukp.wikipedia</groupId>
-			<artifactId>de.tudarmstadt.ukp.wikipedia.api</artifactId>
-			<version>0.9.2</version>
-		</dependency>
-		<dependency>
 			<groupId>dkpro.similarity</groupId>
 			<artifactId>
 				dkpro.similarity.algorithms.wikipedia-asl
 			</artifactId>
-			<version>2.1.0</version>
+			<version>2.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
