--- a/de.tudarmstadt.ukp.dkpro.wsd.wsi/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.wsi/pom.xml
@@ -86,14 +86,14 @@
 	  		<artifactId>
 	  			de.tudarmstadt.ukp.dkpro.lexsemresource.api-asl
 	  		</artifactId>
-	  		<version>0.8.0</version>
+	  		<version>0.8.1-SNAPSHOT</version>
 	  	</dependency>
 		<dependency>
 			<groupId>dkpro.similarity</groupId>
 			<artifactId>
 				dkpro.similarity.algorithms.core-asl
 			</artifactId>
-			<version>2.1.0</version>
+			<version>2.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
