--- a/de.tudarmstadt.ukp.dkpro.wsd-asl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd-asl/pom.xml
@@ -40,7 +40,7 @@
 			<dependency>
 				<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
 				<artifactId>de.tudarmstadt.ukp.dkpro.core-asl</artifactId>
-				<version>1.7.0</version>
+				<version>${dkpro.core.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
