--- a/de.tudarmstadt.ukp.dkpro.wsd.core/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.core/pom.xml
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>net.sf.jung</groupId>
       <artifactId>jung-api</artifactId>
-      <version>2.0.1</version>
+      <version>${jung.version}</version>
     </dependency>
     <dependency>
       <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
