--- a/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.examples-gpl/pom.xml
@@ -94,7 +94,7 @@
 				<artifactId>
 					de.tudarmstadt.ukp.dkpro.core.stanfordnlp-gpl
 				</artifactId>
-				<version>1.7.0</version>
+				<version>${dkpro.core.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
