--- a/de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.graphconnectivity/pom.xml
@@ -29,17 +29,17 @@
   	<dependency>
   		<groupId>net.sf.jung</groupId>
   		<artifactId>jung-api</artifactId>
-  		<version>2.0.1</version>
+  		<version>${jung.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>net.sf.jung</groupId>
   		<artifactId>jung-graph-impl</artifactId>
-  		<version>2.0.1</version>
+  		<version>${jung.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>net.sf.jung</groupId>
   		<artifactId>jung-visualization</artifactId>
-  		<version>2.0.1</version>
+  		<version>${jung.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>de.tudarmstadt.ukp.dkpro.wsd</groupId>
