--- a/de.tudarmstadt.ukp.dkpro.wsd.si.germanet-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.si.germanet-gpl/pom.xml
@@ -37,12 +37,12 @@
   	<dependency>
   		<groupId>net.sf.jung</groupId>
   		<artifactId>jung-api</artifactId>
-  		<version>2.0.1</version>
+  		<version>${jung.version}</version>
   	</dependency>
   	<dependency>
   		<groupId>net.sf.jung</groupId>
   		<artifactId>jung-graph-impl</artifactId>
-  		<version>2.0.1</version>
+  		<version>${jung.version}</version>
   	</dependency>
   </dependencies>
 </project>
