--- a/de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl/pom.xml
@@ -82,7 +82,7 @@
   		<dependency>
   			<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
   			<artifactId>de.tudarmstadt.ukp.dkpro.core-gpl</artifactId>
-  			<version>1.7.0</version>
+  			<version>${dkpro.core.version}</version>
   			<type>pom</type>
   			<scope>import</scope>
   		</dependency>
