--- a/_data/releases.yml
+++ b/_data/releases.yml
@@ -7,3 +7,17 @@
 #   status: stable
 #
 # Possible status: "stable", "unstable"
+
+- version: 1.2.0
+  date: 2015-03-03
+  status: stable
+  groupId: de.tudarmstadt.ukp.dkpro.wsd
+  artifactId: de.tudarmstadt.ukp.dkpro.wsd.core
+
+- version: 1.3.0-SNAPSHOT
+  date: unknown
+  status: unstable
+  groupId: de.tudarmstadt.ukp.dkpro.wsd
+  artifactId: de.tudarmstadt.ukp.dkpro.wsd
+#  user_guide_url: https://zoidberg.ukp.informatik.tu-darmstadt.de/jenkins/job/DKPro%20TC%20Documentation%20(GitHub)/de.tudarmstadt.ukp.dkpro.tc%24dkpro-tc-doc/doclinks/1/
+#  developer_guide_url: https://zoidberg.ukp.informatik.tu-darmstadt.de/jenkins/job/DKPro%20TC%20Documentation%20(GitHub)/de.tudarmstadt.ukp.dkpro.tc%24dkpro-tc-doc/doclinks/2/
