--- a/_data/network.yml
+++ b/_data/network.yml
@@ -1,9 +1,9 @@
 #- menu_name: "Mailing lists"
 
-#- name: "Users"
-#  url: "http://groups.google.com/group/PROJECT_X-user"
-#  class: "network-entypo"
-#  title: "Users"
+- name: "Users"
+  url: "http://groups.google.com/group/dkpro-wsd-users"
+  class: "network-entypo"
+  title: "Users"
 
 #- name: "Developers"
 #  url: "http://groups.google.com/group/PROJECT_X-developers"
