--- a/de.tudarmstadt.ukp.dkpro.wsd.core/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.core/pom.xml
@@ -44,7 +44,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>14.0-rc2</version>
+      <version>18.0</version>
     </dependency>
     <dependency>
       <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
