Upgrade to DKPro LSR 0.8.1

--- a/de.tudarmstadt.ukp.dkpro.wsd.wsi/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.wsi/pom.xml
@@ -86,7 +86,7 @@
 	  		<artifactId>
 	  			de.tudarmstadt.ukp.dkpro.lexsemresource.api-asl
 	  		</artifactId>
-	  		<version>0.8.1-SNAPSHOT</version>
+	  		<version>0.8.1</version>
 	  	</dependency>
 		<dependency>
 			<groupId>dkpro.similarity</groupId>
