--- a/de.tudarmstadt.ukp.dkpro.wsd.si.lsr/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.si.lsr/pom.xml
@@ -72,7 +72,7 @@
   			<artifactId>
   				de.tudarmstadt.ukp.dkpro.lexsemresource-asl
   			</artifactId>
-  			<version>0.8.1-SNAPSHOT</version>
+  			<version>0.8.1</version>
   			<type>pom</type>
   			<scope>import</scope>
   		</dependency>
