Issue #79: Upgrade liblinear dependency from 1.7 (still missing) to 1.7.1

--- a/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl/pom.xml
@@ -97,9 +97,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>liblinear</groupId>
+			<groupId>de.bwaldvogel</groupId>
 			<artifactId>liblinear</artifactId>
-			<version>1.7</version>
+			<version>1.7.1</version>
 		</dependency>
 	</dependencies>
 	<name>DKPro WSD GPL - IMS</name>
