No issue. Update organization URL in POM

--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
       <email>miller@ukp.informatik.tu-darmstadt.de</email>
       <url>http://www.nothingisreal.com/</url>
       <organization>Ubiquitous Knowledge Processing Lab, Department of Computer Science, Technische Universität Darmstadt</organization>
-      <organizationUrl>http://www.ukp.tu-darmstadt.de/</organizationUrl>
+      <organizationUrl>https://www.ukp.tu-darmstadt.de/</organizationUrl>
       <roles>
         <role>developer</role>
       </roles>
