Disable IMS code. Issue #81

--- a/de.tudarmstadt.ukp.dkpro.wsd-gpl/pom.xml
+++ b/de.tudarmstadt.ukp.dkpro.wsd-gpl/pom.xml
@@ -30,9 +30,9 @@
 	<modules>
 		<module>../de.tudarmstadt.ukp.dkpro.wsd.si.twsi-gpl</module>
 		<module>../de.tudarmstadt.ukp.dkpro.wsd.supervised.twsi-gpl</module>
-		<module>../de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</module>
+		<!--  <module>../de.tudarmstadt.ukp.dkpro.wsd.supervised.ims-gpl</module>  -->
 		<module>../de.tudarmstadt.ukp.dkpro.wsd.examples-gpl</module>
-		<module>../de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl</module>
+		 <!--  <module>../de.tudarmstadt.ukp.dkpro.wsd.wrapper-gpl</module>  -->
 		<module>../de.tudarmstadt.ukp.dkpro.wsd.si.germanet-gpl</module>
 	</modules>
 	<dependencyManagement>
