--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>dkpro-parent-pom</artifactId>
-    <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
-    <version>10</version>
+    <groupId>org.dkpro</groupId>
+    <version>24</version>
   </parent>
   <properties>
     <dkpro.core.version>1.7.0</dkpro.core.version>
